samples/_failures_safe/1761189559_8e28d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b930b219.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_b930b219.c:112:13: error: expected declaration or statement at end of input
  112 |             found = 1;
      |             ^~~~~
./samples/SAFE/__tmp_b930b219.c:112:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b930b219.c:112:13: error: expected declaration or statement at end of input
